Dep_sample_tfs_k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dqcml-3in1-nonprod
  labels:
    run: dqcml-3in1-nonprod
spec:
  selector:
    matchLabels:
      run: dqcml-3in1-nonprod
  replicas: 1
  template:
    metadata:
      labels:
        run: dqcml-3in1-nonprod
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - image: <some_art_repo>:<image>
        name: dqcml-3in1-nonprod
        args:
        -  "--model_config_file=/models/models.conf"
        ports:
        - containerPort: 8501
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "10Gi"
            cpu: "4"
            
      restartPolicy: Always
  # strategy: Recreate
