Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart
  labels:
    app: heart
  namespace: flumenot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heart
  template:
    metadata:
      labels:
        app: heart
    spec:
      containers:
        - image: ecthackathonacr.azurecr.io/mvp_sample_check:first_docker
          imagePullPolicy: Always
          name: heart
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
