TfsDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <app-name>
  labels:
    run: <app-name>
spec:
  selector:
    matchLabels:
      run: <app-name>
  replicas: 2
  template:
    metadata:
      labels:
        run: <app-name>
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - image: <container-path from repo>
        name: <app-name>
        args:
        -  "--model_config_file=/models/models.conf"
        ports:
        - containerPort: 8501
        imagePullPolicy: Always
        resources:
          requests:
            memory: "5Gi"
            cpu: "2"
          limits:
            memory: "15Gi"
            cpu: "10"
            
      restartPolicy: Always
  # strategy: Recreate
