Services_NonProduction_tfs.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: <app-name>
  name:  <app-name>
  namespace: <namespace>
spec:
  type: NodePort
  ports:
  - nodePort: 30570
    port: 8501
    targetPort: 8501
    protocol: TCP
    name:  <app-name>
  selector:
    run:  <app-name>
